--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 	
 	<title>Wndr.Land</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;"/>
+	<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
 	<!-- <meta http-equiv="ScreenOrientation" content="autoRotate:disabled"> -->
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
@@ -789,6 +789,29 @@ if ($(window).width() > 768) {
 </script>
 
 
+
+	<script type="text/javascript">
+(function(doc) {
+
+	var addEvent = 'addEventListener',
+	    type = 'gesturestart',
+	    qsa = 'querySelectorAll',
+	    scales = [1, 1],
+	    meta = qsa in doc ? doc[qsa]('meta[name=viewport]') : [];
+
+	function fix() {
+		meta.content = 'width=device-width,minimum-scale=' + scales[0] + ',maximum-scale=' + scales[1];
+		doc.removeEventListener(type, fix, true);
+	}
+
+	if ((meta = meta[meta.length - 1]) && addEvent in doc) {
+		fix();
+		scales = [.25, 1.6];
+		doc[addEvent](type, fix, true);
+	}
+
+}(document));
+</script>
 
 	
 
