--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,6 @@
     display: none;
 }
 
-
 .shadow-button-3 {
     margin: 14px 0;
     font-size: 20px;
@@ -15551,17 +15550,17 @@ img.blog-section-img-tabs {
   }  */
 
 
- @media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+ /* @media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
     html {
       transform: rotate(90deg);
-      /* transform-origin: left top;
+      transform-origin: left top;
       width: 100vh;
       overflow-x: hidden;
       position: absolute;
       top: 100%;
-      left: 0; */
-    }
-} 
+      left: 0;
+    } */
+
 @media only screen and (min-width: 576px) and (max-width: 577px)  {
     .team_member_section {
         height: 86%!important;
