--- a/templates/base.html
+++ b/templates/base.html
@@ -788,12 +788,27 @@ if ($(window).width() > 768) {
 	
 </script>
 
-
 <script>
-
-if (window.orientation === 90 || window.orientation === -90) {
-   window.orientation=0;
-}
+	$(document).ready(function () {
+     $(window)    
+          .bind('orientationchange', function(){
+               if (window.orientation % 180 == 0){
+                   $(document.body).css("-webkit-transform-origin", "")
+                       .css("-webkit-transform", "");               
+               } 
+               else {                   
+                   if ( window.orientation > 0) { //clockwise
+                     $(document.body).css("-webkit-transform-origin", "200px 190px")
+                       .css("-webkit-transform",  "rotate(-90deg)");  
+                   }
+                   else {
+                     $(document.body).css("-webkit-transform-origin", "280px 190px")
+                       .css("-webkit-transform",  "rotate(90deg)"); 
+                   }
+               }
+           })
+          .trigger('orientationchange'); 
+});
 </script>
 	
 
