--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15560,7 +15560,31 @@ img.blog-section-img-tabs {
       top: 100%;
       left: 0;
     } */
+.mobilelandscapeview {
+    display: none;
+}
+body {
+    background-color: #000 !important;
+}
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
 
+    .mobileportraitview {
+        display:none !important;
+    }
+    .mobilelandscapeview {
+        display:block !important;
+    }
+    }
+
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: portrait) {
+
+    .mobileportraitview {
+        display:block !important;
+    }
+    .mobilelandscapeview {
+        display:none !important;
+    }
+    }
 @media only screen and (min-width: 576px) and (max-width: 577px)  {
     .team_member_section {
         height: 86%!important;
