--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
-	
+
 <head>
-	
-	
-	
+
+
+
 	<title>Wndr.Land</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
@@ -16,9 +16,9 @@
 	<link rel="stylesheet" href="{% static 'css/slick.css' %}">
 	<!--<link rel="stylesheet" href="{% static 'css/uikit.min.css' %}">-->
 	<link rel="stylesheet" href="{% static 'css/slick-theme.css' %}">
-	
 
-	
+
+
 	<!-- bootstrap-css start -->
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -38,7 +38,7 @@
 
 	<!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
 
-		</style>
+	</style>
 </head>
 <style>
 
@@ -48,22 +48,30 @@
 <body>
 
 	<!-- banner -->
+	<div class="mobilelandscapeview">
+		Pleases switch to portrait mode for better experience
+	</div>
+	<div class="mobileportraitview">
 	<div class="banner-WNDR">
 		<div class="home_page_banner">
 			<img src="{% static 'image/banner_img.jpg' %}" class="banner-img-bg" alt="banner-img">
 			<img src="{% static 'image/banner_img-tabs.jpg' %}" class="banner-img-bg-tabs" alt="banner-img1">
 			<img src="{% static 'image/banner_img-mobile.jpg' %}" class="banner-img-bg-mobile" alt="banner-img2">
 		</div>
-		
+
 		<div class="banner_video_section">
 			<video class="banner_desktop_video" id="video2" width="100%" height="100%" preload='none'
 				poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
-				<source id="vid2_source" src="{% if video_obj %}{{video_obj.desktop_top_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/PC_version_10mbps.mp4 {%endif%}" type="video/mp4">
+				<source id="vid2_source"
+					src="{% if video_obj %}{{video_obj.desktop_top_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/PC_version_10mbps.mp4 {%endif%}"
+					type="video/mp4">
 				<!-- "{% static 'video/PC_version_10mbps_VP8.webm' %}" -->
 			</video>
 			<video class="banner_mobile_video" id="video21" width="100%" height="100%" preload='none'
 				poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
-				<source  id="vid21_source" src="{% if video_obj %}{{video_obj.mobile_top_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/Mobile_10mbps.mp4{%endif%}" type="video/mp4">
+				<source id="vid21_source"
+					src="{% if video_obj %}{{video_obj.mobile_top_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/Mobile_10mbps.mp4{%endif%}"
+					type="video/mp4">
 				<!-- "{% static 'video/Mobile_10mbps_VP8_003.webm' %}" -->
 			</video>
 			<div class="video-content">
@@ -343,27 +351,27 @@
 			$('#myVideo').parent().find("#play_button").css("display", "block");
 			$('#myVideo').parent().find(".playpause").css("display", "block");
 			$('#myVideo').parent().click(function () {
-                if ($(this).children("#myVideo").get(0).paused) {
-                   
-                    $(this).children("#myVideo").get(0).play();
-                    $(".gamePlayer-outer").css('height', '87%');
-                    $(this).find("#play_button").css("display", "none");
-                    //$("#myVideo2").get(0).play();
-                    $(this).find(".playpause").css("display", "none");
-                }
-                else {
-                    console.log('absolute');
-                    $(this).children("#myVideo").get(0).pause();
-                    //$("#myVideo2").get(0).play();
-				
-					//$("#myVideo").get(0).play();
-                    $(".gamePlayer-outer").css('height', '100%');
-                    $(this).find("#play_button").css("display", "block");
-                    $(this).find(".playpause").css("display", "block");
-                    $(this).find(".playpause p").css("display", "block");
+				if ($(this).children("#myVideo").get(0).paused) {
 
-                }
-            });
+					$(this).children("#myVideo").get(0).play();
+					$(".gamePlayer-outer").css('height', '87%');
+					$(this).find("#play_button").css("display", "none");
+					//$("#myVideo2").get(0).play();
+					$(this).find(".playpause").css("display", "none");
+				}
+				else {
+					console.log('absolute');
+					$(this).children("#myVideo").get(0).pause();
+					//$("#myVideo2").get(0).play();
+
+					//$("#myVideo").get(0).play();
+					$(".gamePlayer-outer").css('height', '100%');
+					$(this).find("#play_button").css("display", "block");
+					$(this).find(".playpause").css("display", "block");
+					$(this).find(".playpause p").css("display", "block");
+
+				}
+			});
 
 
 
@@ -371,33 +379,33 @@
 			$('#myVideo2').parent().find("#play_button").css("display", "block");
 			$('#myVideo2').parent().find(".playpause").css("display", "block");
 			$('#myVideo2').parent().click(function () {
-                if ($(this).children("#myVideo2").get(0).paused) {
-                   
-                    $(this).children("#myVideo2").get(0).play();
-                    $(".gamePlayer-outer").css('height', '87%');
-                    $(this).find("#play_button").css("display", "none");
-                    //$("#myVideo2").get(0).play();
-                    $(this).find(".playpause").css("display", "none");
-                }
-                else {
-                    console.log('absolute');
-                    $(this).children("#myVideo2").get(0).pause();
-                    //$("#myVideo2").get(0).play();
-				
-					//$("#myVideo").get(0).play();
-                    $(".gamePlayer-outer").css('height', '100%');
-                    $(this).find("#play_button").css("display", "block");
-                    $(this).find(".playpause").css("display", "block");
-                    $(this).find(".playpause p").css("display", "block");
+				if ($(this).children("#myVideo2").get(0).paused) {
 
-                }
-            });
+					$(this).children("#myVideo2").get(0).play();
+					$(".gamePlayer-outer").css('height', '87%');
+					$(this).find("#play_button").css("display", "none");
+					//$("#myVideo2").get(0).play();
+					$(this).find(".playpause").css("display", "none");
+				}
+				else {
+					console.log('absolute');
+					$(this).children("#myVideo2").get(0).pause();
+					//$("#myVideo2").get(0).play();
+
+					//$("#myVideo").get(0).play();
+					$(".gamePlayer-outer").css('height', '100%');
+					$(this).find("#play_button").css("display", "block");
+					$(this).find(".playpause").css("display", "block");
+					$(this).find(".playpause p").css("display", "block");
+
+				}
+			});
 
 
 			/*-----End vision poster image----*/
 
 			$(document).ready(function () {
-			
+
 				// $('.playpause').css("display","none");
 				var x = $('#myVideo');
 				x.controls = true;
@@ -428,7 +436,7 @@
 					}
 				});
 			});
-			
+
 			$("#load-image-of-modal-subscibe1").hide()
 			function myFunction1() {
 				email = $('#myInput1').val();
@@ -460,24 +468,24 @@
 			}
 			$("#load-image").hide()
 			function myFunction2() {
-				
+
 				email = $('#myInput2').val();
 				console.log("Arrivals-----1")
 				console.log(email)
 				$("#btn-d2").attr("disabled", true);
-			
+
 				if (email != '') {
 					console.log("abc")
 					$("#load-image").show()
 					$.ajax({
 						type: "POST",
-						
+
 						data: {
 							"email": email,
 							'csrfmiddlewaretoken': '{{csrf_token}}'
 						},
-						
-						
+
+
 						success: function (data) {
 							$("#load-image").hide()
 							document.getElementById("sucess_div2").hidden = false;
@@ -556,244 +564,245 @@
 					if ($("#video2").prop('muted')) {
 						$("#video2").prop('muted', false);
 						// $(this).text('off');
-						$(this).removeClass("fa fa-volume-off ").addClass("fa fa-volume-up") ;
-						
+						$(this).removeClass("fa fa-volume-off ").addClass("fa fa-volume-up");
+
 						// or toggle class, style it with a volume icon sprite, change background-position
 					} else {
 						$("#video2").prop('muted', true);
 						// $(this).children("i").attr("class", "fa fa-volume-up ") ;
 						// alert('mute');
-					   $(this).removeClass("fa fa-volume-up ").addClass("fa fa-volume-off") ;
+						$(this).removeClass("fa fa-volume-up ").addClass("fa fa-volume-off");
 					}
 				});
 
 
 
 				// -------------------
-			 	$('#audio-mobile-control').click(function () {
-			 		if ($("#video21").prop('muted')) {
-			 			$("#video21").prop('muted', false);
-			// 			// $(this).text('off');
-			 			$(this).removeClass("fa fa-volume-off ").addClass("fa fa-volume-up") ;
-						
-			// 			// or toggle class, style it with a volume icon sprite, change background-position
-			 		} else {
-			 			$("#video21").prop('muted', true);
-			// 			// $(this).children("i").attr("class", "fa fa-volume-up ") ;
-						$(this).removeClass("fa fa-volume-up ").addClass("fa fa-volume-off") ;
-			 		}
-			 	});
+				$('#audio-mobile-control').click(function () {
+					if ($("#video21").prop('muted')) {
+						$("#video21").prop('muted', false);
+						// 			// $(this).text('off');
+						$(this).removeClass("fa fa-volume-off ").addClass("fa fa-volume-up");
+
+						// 			// or toggle class, style it with a volume icon sprite, change background-position
+					} else {
+						$("#video21").prop('muted', true);
+						// 			// $(this).children("i").attr("class", "fa fa-volume-up ") ;
+						$(this).removeClass("fa fa-volume-up ").addClass("fa fa-volume-off");
+					}
+				});
 
 
-			 })
+			})
 
-			
+
 
 
 		</script>
 
-<script>
-	// home video mute volume and allow volume code 
+		<script>
+			// home video mute volume and allow volume code 
 
-	// it is for destop video
+			// it is for destop video
 
-	$(document).ready(function () {
-		$('#audio-home-control').click(function () {
-			if ($("#myVideo").prop('muted')) {
-				$("#myVideo").prop('muted', false);
-				// $(this).text('off');
-			
-				$(this).removeClass("fa fa-volume-off ").addClass("fa fa-volume-up") ;
-				
-				
-				// or toggle class, style it with a volume icon sprite, change background-position
-			} else {
-				$("#myVideo").prop('muted', true);
-				$(this).children("i").attr("class", "fa fa-volume-up ") ;
-				$(this).removeClass("fa fa-volume-up ").addClass("fa fa-volume-off") ;
-			}
-		});
+			$(document).ready(function () {
+				$('#audio-home-control').click(function () {
+					if ($("#myVideo").prop('muted')) {
+						$("#myVideo").prop('muted', false);
+						// $(this).text('off');
+
+						$(this).removeClass("fa fa-volume-off ").addClass("fa fa-volume-up");
 
 
-		// it is for mobile 
-
-		$('#audio-home-control').click(function () {
-			if ($("#myVideo2").prop('muted')) {
-				$("#myVideo2").prop('muted', false);
-				// $(this).text('off');
-			
-				$(this).removeClass("fa fa-volume-off ").addClass("fa fa-volume-up") ;
-				
-				
-				// or toggle class, style it with a volume icon sprite, change background-position
-			} else {
-				$("#myVideo2").prop('muted', true);
-				$(this).children("i").attr("class", "fa fa-volume-up ") ;
-				
-			}
-		});
-	})
+						// or toggle class, style it with a volume icon sprite, change background-position
+					} else {
+						$("#myVideo").prop('muted', true);
+						$(this).children("i").attr("class", "fa fa-volume-up ");
+						$(this).removeClass("fa fa-volume-up ").addClass("fa fa-volume-off");
+					}
+				});
 
 
-            $(window).scroll(function(){
-                var scroll = $(window).scrollTop();
-				var get_video_section_height=$(".banner_desktop_video").height()-116
-                    if(scroll > get_video_section_height){ 
-						
-				    $(".video-content").children("i").attr("class", "fa fa-volume-off ") ; 
-                    $('#video2').get(0).pause()
-					$("#video2").prop("muted",true);
-				
-					
-					
-					
-                    }
-                else{
+				// it is for mobile 
+
+				$('#audio-home-control').click(function () {
+					if ($("#myVideo2").prop('muted')) {
+						$("#myVideo2").prop('muted', false);
+						// $(this).text('off');
+
+						$(this).removeClass("fa fa-volume-off ").addClass("fa fa-volume-up");
+
+
+						// or toggle class, style it with a volume icon sprite, change background-position
+					} else {
+						$("#myVideo2").prop('muted', true);
+						$(this).children("i").attr("class", "fa fa-volume-up ");
+
+					}
+				});
+			})
+
+
+			$(window).scroll(function () {
+				var scroll = $(window).scrollTop();
+				var get_video_section_height = $(".banner_desktop_video").height() - 116
+				if (scroll > get_video_section_height) {
+
+					$(".video-content").children("i").attr("class", "fa fa-volume-off ");
+					$('#video2').get(0).pause()
+					$("#video2").prop("muted", true);
+
+
+
+
+				}
+				else {
 					// $("#video2").prop("muted",false)
-                    $('#video2').get(0).play();
+					$('#video2').get(0).play();
 					//$(".video-content").children("i").attr("class", "fa fa-volume-up ") ; 
 					// $("#video2").removeClass("fa fa-volume-up").addClass("fa fa-volume-up")
 
-                }
-			})  
-            
-
-			
-	</script>
-
-<script>
-	$(document).ready(function() {
-
-var div_height = $(".WNDRLAND-WNDR").height()+ $(".slct-pvc-crypto").height()+$(".slect-outer").height()+$(".about-WNDR").height()+$(".banner_video_section").height();
-
-                                
-                                
-$(window).scroll(function() {
-   if($(window).scrollTop() < div_height) {
-	$("#myVideo").get(0).pause();
-	$("#myVideo2").get(0).pause();
-	
-	$("#play_button").css("display", "block");
-					$(".playpause").css("display", "block");
-					$(".playpause p").css("display", "block");
-					$(".gamePlayer-outer").css('height', '100%');
-   }
+				}
+			})
 
 
-   var vid_dwn_pause = div_height + $(".gamePlayer").height(); 
-});
-})
+
+		</script>
+
+		<script>
+			$(document).ready(function () {
+
+				var div_height = $(".WNDRLAND-WNDR").height() + $(".slct-pvc-crypto").height() + $(".slect-outer").height() + $(".about-WNDR").height() + $(".banner_video_section").height();
 
 
-</script>
-<script>
- 
-	$(document).ready(function(){
-		$("#myVideo")[0].autoplay=false;
-		
-	
-	})
 
-	
- </script>
+				$(window).scroll(function () {
+					if ($(window).scrollTop() < div_height) {
+						$("#myVideo").get(0).pause();
+						$("#myVideo2").get(0).pause();
 
-
-<script>
-	$(document).ready(function(){
-            $(window).scroll(function(){
-                var scroll = $(window).scrollTop();
-				var get_video_section_height=$(".banner_mobile_video").height()-116
-                    if(scroll > get_video_section_height){ 
-						
-					$(".video-content_mobile").children("i").attr("class", "fa fa-volume-off ") ;  
-                    $('#video21').get(0).pause()
-					$("#video21").removeClass("fa fa-volume-off").addClass("fa fa-volume-up")
-					$("#video21").prop("muted",false);
-					
-					
-                    }
-                else{
-					$("#video21").prop("muted",true)
-					// alert('h');
-                    $('#video21').get(0).play();
-					//$(".video-content").children("i").attr("class", "fa fa-volume-off ") ; 
-					// $("#video2").removeClass("fa fa-volume-up").addClass("fa fa-volume-up")
-
-                }
-			})  
-            })
-
-</script>
+						$("#play_button").css("display", "block");
+						$(".playpause").css("display", "block");
+						$(".playpause p").css("display", "block");
+						$(".gamePlayer-outer").css('height', '100%');
+					}
 
 
-<script>
-	function openFullscreen() {  
-
-  var video = document.getElementById('myVideo');
-
-
-  video.webkitRequestFullscreen();
-
- 
-  
-  $("#myVideo").attr('disablePictureInPicture', 'true');
-
-	}
-	openFullscreen();
-
-</script>
-  <script>
-	$(".fullscr").click(function() {
-    var video = $(".fullscr").get(0);
-	if (video.paused) {
-          video.play();
-        
-       } else {
-          video.pause();
-        
-       }
-    
-})
-	</script>
-
-<script>
-	$(".fullscr-mobile").click(function() {
-    var video = $(".fullscr-mobile").get(0);
-	if (video.paused) {
-          video.play();
-        
-       } else {
-          video.pause();
-        
-       }
-    
-})
-	</script>
+					var vid_dwn_pause = div_height + $(".gamePlayer").height();
+				});
+			})
 
 
-<script>
-$(document).ready(function(){
-if ($(window).width() < 767) {
-var video = document.getElementById('video2');
-var source = document.getElementById('vid2_source');
-source.setAttribute('src', '');
-// screen.lockOrientation("landscape");
-}
-if ($(window).width() > 768) {
-	var video = document.getElementById("video21");
-	var source = document.getElementById('vid21_source');
-	source.setAttribute('src', '');
-	}
-	})
-	
-</script>
+		</script>
+		<script>
 
-<script>
-	  
+			$(document).ready(function () {
+				$("#myVideo")[0].autoplay = false;
 
-</script>
-	
 
+			})
+
+
+		</script>
+
+
+		<script>
+			$(document).ready(function () {
+				$(window).scroll(function () {
+					var scroll = $(window).scrollTop();
+					var get_video_section_height = $(".banner_mobile_video").height() - 116
+					if (scroll > get_video_section_height) {
+
+						$(".video-content_mobile").children("i").attr("class", "fa fa-volume-off ");
+						$('#video21').get(0).pause()
+						$("#video21").removeClass("fa fa-volume-off").addClass("fa fa-volume-up")
+						$("#video21").prop("muted", false);
+
+
+					}
+					else {
+						$("#video21").prop("muted", true)
+						// alert('h');
+						$('#video21').get(0).play();
+						//$(".video-content").children("i").attr("class", "fa fa-volume-off ") ; 
+						// $("#video2").removeClass("fa fa-volume-up").addClass("fa fa-volume-up")
+
+					}
+				})
+			})
+
+		</script>
+
+
+		<script>
+			function openFullscreen() {
+
+				var video = document.getElementById('myVideo');
+
+
+				video.webkitRequestFullscreen();
+
+
+
+				$("#myVideo").attr('disablePictureInPicture', 'true');
+
+			}
+			openFullscreen();
+
+		</script>
+		<script>
+			$(".fullscr").click(function () {
+				var video = $(".fullscr").get(0);
+				if (video.paused) {
+					video.play();
+
+				} else {
+					video.pause();
+
+				}
+
+			})
+		</script>
+
+		<script>
+			$(".fullscr-mobile").click(function () {
+				var video = $(".fullscr-mobile").get(0);
+				if (video.paused) {
+					video.play();
+
+				} else {
+					video.pause();
+
+				}
+
+			})
+		</script>
+
+
+		<script>
+			$(document).ready(function () {
+				if ($(window).width() < 767) {
+					var video = document.getElementById('video2');
+					var source = document.getElementById('vid2_source');
+					source.setAttribute('src', '');
+					// screen.lockOrientation("landscape");
+				}
+				if ($(window).width() > 768) {
+					var video = document.getElementById("video21");
+					var source = document.getElementById('vid21_source');
+					source.setAttribute('src', '');
+				}
+			})
+
+		</script>
+
+		<script>
+
+
+		</script>
+
+	</div>
+</div>
 
 
 </body>
