--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14022,7 +14022,8 @@ img.blog-section-img-tabs {
     }
 
     .about-WNDR {
-        background: url(../image/about-bg-mobile.png);
+        /* background: url(../image/about-bg-mobile.png); */
+        background-color: #ffffff;
     }
 
     .about-WNDR-outer p {
