--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 
 	<!-- banner -->
 	<div class="mobilelandscapeview">
-		Pleases switch to portrait mode for better experience
+		Please switch to portrait mode for better experience
 	</div>
 	<div class="mobileportraitview">
 	<div class="banner-WNDR">
