--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -19,7 +19,10 @@
 	<!-- fav icon -->
 	<link rel="icon" type="image/x-icon" href="{% static 'image/fab-ic.png' %}">
 	<!-- font awsome -->
+	
 	<script src="https://use.fontawesome.com/b197abb434.js"></script>
+
+	<script src="https://kit.fontawesome.com/1086841b1d.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="vision-sections">
@@ -34,8 +37,7 @@
 						<img src="{% static 'image/nesltr-line.png' %}" class="subscribe-line-pc" alt="newsletter-line">
 						<img src="{% static 'image/subscribe-line-tabs.png' %}" class="subscribe-line-tabs"
 							alt="newsletter-line1">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur luctus enim ac aliquet
-							facilisis. </p>
+						<p>Subscribe here to get the latest news on WNDR events, launch dates, SDK release, WNDR coin and NFT drops. </p>
 						<form method="post" onsubmit="return false;">
 
 							<!--<span class="nesltr-btn">
@@ -371,9 +373,11 @@
 							controlslist="nodownload noplaybackrate" webkit-playsinline="true" playsinline="true">
 							<source src="{% static 'video/wndr_Tech demo (1080p).mp4' %}" type="video/mp4">
 						</video>
-						<img class="vision_poster_bnr" id="vision_poster_bnr_img"
-							src="{% static 'image/slide-15-STREAM.jpg' %}" alt="vision_poster">
-								
+						{% comment %} src="{% static 'image/slide-15-STREAM.jpg' %}" {% endcomment %}
+						{% comment %} <img class="vision_poster_bnr" id="vision_poster_bnr_img"
+							src=""> {% endcomment %}
+							<i class="fa-solid fa-expand " id="" onclick="onvisionfullscreen();"></i>	
+
 					<div class="video-vision">
 
 						<i class="fa fa-volume-off" id="audio-control-vision" aria-hidden="true"></i>
@@ -878,6 +882,20 @@
 
 
 		})
+	</script>
+
+	<script>
+
+
+		function onvisionfullscreen() {
+
+			var vision_video = document.getElementById('myVideo12');
+			console.log("VIDEOonvision", vision_video)
+			vision_video.webkitRequestFullscreen();
+			$("#myVideo12").attr('disablePictureInPicture', 'true');
+
+
+		}
 	</script>
 
 </html>
